# Linkit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 29f2598a646f_add_created_at.py  5cd68835c1b5_add_created_at.py  6f28bf44bee1_add_created_at.py  92f000a53ed9_create_users_table.py  b658fca408d2_.py  d0d01eb4b7fd_create_urls_table.py
app/: auth.py  database.py  main.py  models.py  schema.py  worker.py
app/routers/: urls.py  users.py
frontend/: index.html
tests/: test_urls.py
